# php-spte

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  composer.json  linux-build.sh  phpunit.xml.dist  win-build.bat
src/: CMakeLists.txt
src/lib/: socket.c  socket.h
test/: HelloTest.php  SocketRecvFileTest.php  StdinToStdoutTest.php  StdoutAndStderrTest.php  TestCase.php  WaitTest.php
